2009-12-21  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-bs-mime-part.c
	(..._get_decoded_stream_default): properly decode text/plain
	messages as utf8.

2009-12-18  Sergio Villar Senin  <svillar@igalia.com>

	* camel/providers/pop3/camel-pop3-folder.c (pop3_sync): protect
	the call to camel_pop3_store_expunge

	* camel/providers/pop3/camel-pop3-store.c
	(camel_pop3_store_expunge): do not perform a sync if we're offline

2009-12-18  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c (conic_emit_status)
	(tny_maemo_conic_device_instance_init)
	(tny_maemo_conic_device_finalize): do not issue pending
	"connection-changed" signals if new ones are coming.

2009-12-18  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c: added include to
	tny-camel-common-priv.h, as it was causing a build warning that
	points to a problem that could cause crashes in 64 bit
	architectures.

2009-12-16  Sergio Villar Senin  <svillar@igalia.com>

	* camel/providers/imap/camel-imap-folder.c (imap_fetch_structure):
	when retrieving BODYSTRUCTURE data set the message cache to
	partial. This way, next time we'll recognize that the message was
	not fully downloaded.

2009-12-16  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c (tny_camel_mime_part_get_parts_default)
	(tny_camel_mime_part_add_part_default)
	(tny_camel_mime_part_content_type_is_default)
	(tny_camel_mime_part_get_content_type_default): do not assume that
	every mime part has content type

2009-12-14  Sergio Villar  <svillar@igalia.com>

	* Removed libtinymail-gio/libtinymail-gio-1.0.pc incorrectly added
	to repo

2009-12-12  Jose Dapena Paz  <jdapena@igalia.com>

	* On getting the decoded stream from bs mime part, reset
	to offer a stream started in 0 offset.
	* Fix error detecting embedded message/rfc822 in bs.
	* Add the bodystruct of the child to the embedded message created