@@ -1,5 +1,8 @@
 2009-12-21  Jose Dapena Paz  <jdapena@igalia.com>
 
+	* libtinymail-camel/tny-camel-bs-mime-part.c: properly decode
+	filename field.
+
 	* libtinymail-camel/tny-camel-bs-mime-part.c
 	(..._get_decoded_stream_default): properly decode text/plain
 	messages as utf8.
